# PixelGenesis-NueralNomads

./: .gitignore  HARDHAT_SETUP.md  METAMASK_FIX.md  METAMASK_SETUP.md  PINATA_ENV_SETUP.md  PINATA_SETUP.md  PRESENTATION_SCRIPT.md  PROJECT_SUMMARY.md  QUICK_DEMO_GUIDE.md  QUICK_START.md  README.md  ROLE_BASED_SYSTEM.md  SETUP.md  TRANSFER_OWNERSHIP.md  TROUBLESHOOTING.md  WHATS_NEXT.md  WORKFLOW_GUIDE.md  hardhat.config.js  package-lock.json  package.json
backend/: .gitignore  PINATA_SETUP.md  QUICK_START.md  README.md  RUN_BACKEND.md  create-env.ps1  create-env.sh  docker-compose.yml  pyproject.toml  requirements-web3.txt  requirements.txt  run.py  setup-db.md
backend/alembic/: env.py
backend/alembic/versions/: 37c3fcc537b0_initial_migration.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  routes_auth.py  routes_credentials.py  routes_did.py  routes_verification.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  credential.py  did.py  user.py
backend/app/schemas/: credential.py  did.py  user.py
backend/app/services/: blockchain_service.py  credential_service.py  did_service.py  ipfs_service.py
backend/tests/: conftest.py  test_credentials.py  test_did.py
contracts/: CredentialManager.sol  DIDRegistry.sol  RoleManager.sol
frontend/: INSTALL_DEPS.md  MIGRATION_GUIDE.md  QUICK_FIX.md  README.md  VITE_SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
mobile/: .gitignore  App.js  README.md  (+8 more)
(+169 files in other folders)
